Fix line wrapping for pages

--- a/src/components/styles/_sliding-pagination.scss
+++ b/src/components/styles/_sliding-pagination.scss
@@ -3,19 +3,23 @@
 .pagination {
     pointer-events: all;
 
-    ul, li {
+    ul {
       display: inline;
       margin: 0;
       padding: 0;
     }
 
     li {
+      display: inline-block;
+
       background: $sliding-pagination-background-primary;
       color: $sliding-pagination-foreground-primary;
 
       padding: .6em;
       border-radius: .2em;
+      margin: 0;
       margin-right: .2em;
+      margin-bottom: 1em;
 
       transition-duration: $sliding-pagination-transition-duration;
       transition-property: background, color;
